// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReleaseHeader Display arrow between dates When there are a start date and end date, Then an arrow is displayed 1`] = `
<div
  class="project-release-header"
>
  <i
    class="project-release-whats-hot-icon fa"
  />
   
  <h1
    class="project-release-title"
  >
    <translate-stub
      tag="span"
      translateparams="[object Object]"
    >
      
            Release %{release_label}
        
    </translate-stub>
  </h1>
   
  <span
    class="project-release-date"
  >
    
        Jan 22, 2017
        
    <i
      class="release-date-icon fa fa-long-arrow-right"
    />
    
        Oct 5, 2019
    
  </span>
   
  <div
    class="release-spacer"
  />
   
  <div
    class="release-remaining-effort-badges"
  >
    <release-header-remaining-days-stub
      releasedata="[object Object]"
    />
     
    <release-header-remaining-points-stub
      releasedata="[object Object]"
    />
  </div>
</div>
`;

exports[`ReleaseHeader Display arrow between dates When there isn't a start date of a release, Then there isn't an arrow 1`] = `
<div
  class="project-release-header"
>
  <i
    class="project-release-whats-hot-icon fa"
  />
   
  <h1
    class="project-release-title"
  >
    <translate-stub
      tag="span"
      translateparams="[object Object]"
    >
      
            Release %{release_label}
        
    </translate-stub>
  </h1>
   
  <!---->
   
  <div
    class="release-spacer"
  />
   
  <div
    class="release-remaining-effort-badges"
  >
    <release-header-remaining-days-stub
      releasedata="[object Object]"
    />
     
    <release-header-remaining-points-stub
      releasedata="[object Object]"
    />
  </div>
</div>
`;
